# elte_halprog_2019

./: CMakeLists.txt  README.md  main.cpp
halprog_hf011/: main.cpp
halprog_hf012/: main.cpp
halprog_hf021/: main.cpp
halprog_hf031/: CMakeLists.txt  Fit.h  main.cpp  test.cpp  test1.cpp  test2.cpp
halprog_hf041/: CMakeLists.txt  main.cpp  test_func.cpp  test_op.cpp  test_stream.cpp  vector2.h
halprog_hf051/: CMakeLists.txt  Matrix.hh  main  main.cpp  matrix.hh  test_assigned.cpp  test_co.cpp  test_op_add.cpp  test_op_assigned.cpp  test_op_divscl.cpp  test_op_mulmat.cpp  test_op_mulscl.cpp  test_op_sub.cpp  test_stream.cpp
halprog_hf061/: CMakeLists.txt  Matrix.hh  main.cpp  rand.txt
halprog_hf071/: CMakeLists.txt  Matrix.hh  main.cpp
halprog_hf081/: CMakeLists.txt  main.cpp
halprog_hf082/: CMakeLists.txt  Fit.h  main.cpp
